Правки - адаптивная сетка каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -344,7 +344,7 @@
               Заказать
             </a>
           </li>
-          <li class="main-products__item all-product">
+          <li class="main-products__item main-products__item--all all-product">
             <p class="all-product__title title title--small title--theme-dark">
               Показать еще 100500 товаров
             </p>
@@ -456,7 +456,7 @@
         </p>
       </div>
     </div>
-    <img class="footer__map" src="https://via.placeholder.com/320x362" width="320" height="362"
+    <img class="footer__map" src="img/location@1x.png" width="320" height="362"
       alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     <div class="container">
       <div class="footer__bottom">
