--- a/source/index.html
+++ b/source/index.html
@@ -193,7 +193,7 @@
           ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
         </p>
       </div>
-      <img class="footer__map" src="../img/location@1x.jpg" width="320" height="362"
+      <img class="footer__map" src="img/location@1x.png" width="320" height="362"
         alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     </div>
     <div class="container">
