--- a/source/form.html
+++ b/source/form.html
@@ -216,7 +216,7 @@
         </p>
       </div>
     </div>
-    <img class="footer__map" src="https://via.placeholder.com/320x362" width="320" height="362"
+    <img class="footer__map" src="img/location@1x.png" width="320" height="362"
       alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     <div class="container">
       <div class="footer__bottom">
