--- a/source/catalog.html
+++ b/source/catalog.html
@@ -445,7 +445,7 @@
       </section>
     </div>
   </main>
-  <footer class="footer footer--theme-smoke">
+  <footer class="footer">
     <div class="container">
       <div class="footer__contacts contacts">
         <p class="contacts__title">
