--- a/source/form.html
+++ b/source/form.html
@@ -205,7 +205,7 @@
       </div>
     </div>
   </main>
-  <footer class="footer footer--theme-smoke">
+  <footer class="footer">
     <div class="container">
       <div class="footer__contacts contacts">
         <p class="contacts__title">
