--- a/source/index.html
+++ b/source/index.html
@@ -6,11 +6,11 @@
   <title>Функциональное питание для котов "Cat Energy"</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="page__body body">
-  <div class="container">
-    <header class="body__header header">
+<body class="page__body">
+  <header class="header header--opened">
+    <div class="header__container container">
       <div class="header__top">
-        <a class="header__logo">
+        <a class="header__logo" class="header__logo">
           <img class="header__logo-img" src="https://via.placeholder.com/190x38" width="190" height="38" alt="Логотип Cat Energy">
         </a>
         <button class="header__toggle button" type="button">
@@ -19,7 +19,7 @@
           </span>
         </button>
       </div>
-      <nav class="main-nav">
+      <nav class="header__main-nav main-nav">
         <ul class="main-nav__list list">
           <li class="main-nav__item main-nav__item--current">
             <a class="main-nav__link">
@@ -38,8 +38,8 @@
           </li>
         </ul>
       </nav>
-    </header>
-  </div>
+    </div>
+  </header>
   <main class="main">
     <h1 class="visually-hidden">
       Cat Energy
@@ -53,13 +53,11 @@
           <p class="promo__slogan">
             Занялся собой? Займись котом!
           </p>
-          <div class="promo__content-bottom">
-            <img class="promo__image" src="../img/index-can-mobile@1x.png" width="280" height="270"
-              alt="Бумажный стакан Cat Energy Pro массой 500 грамм со вкусом курицы">
-            <a class="promo__button button button--primary" href="form.html">
-              Подобрать программу
-            </a>
-          </div>
+          <img class="promo__image" src="../img/index-can-mobile@1x.png" width="280" height="270"
+            alt="Бумажный стакан Cat Energy Pro массой 500 грамм со вкусом курицы">
+          <a class="promo__button button button--primary" href="form.html">
+            Подобрать программу
+          </a>
         </div>
       </div>
     </section>
@@ -76,7 +74,7 @@
               </h3>
               <p class="program__slogan">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
-                диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+                диету! Cat Energy Slim поможет вашему питомцу сбросить&nbsp;лишний вес.
               </p>
               <a class="program__link" href="catalog.html">
                 Каталог Slim
@@ -89,8 +87,8 @@
                 Набор массы
               </h3>
               <p class="program__slogan">
-                Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить
-                необходимые мышцы!
+                Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить
+                необходимые<br> мышцы!
               </p>
               <a class="program__link" href="catalog.html">
                 Каталог Pro
@@ -114,21 +112,21 @@
             Замените один-два приема обычной еды на наше функциональное питание.
           </li>
           <li class="features__item features__item--theme-thime">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!
           </li>
         </ol>
       </section>
     </div>
     <section class="example">
       <div class="container">
-        <h2 class="example__title title title--x-large">
-          Живой пример
-        </h2>
         <div class="example__content">
           <div class="example__content-text">
+            <h2 class="example__title title title--x-large">
+              Живой пример
+            </h2>
             <p class="example__desc">
-              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-              изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy&nbsp;Slim. Отличный результат без
+              изнуряющих тренировок! При этом он не менял своих привычек и <nobr>по-прежнему</nobr> спит по 16 часов в день.
             </p>
             <div class="example__content-result">
               <dl class="example__list list">
@@ -145,23 +143,23 @@
                     60 дней
                   </dt>
                   <dd class="result__definition">
-                    затрачено<br> времени
+                    затрачено времени
                   </dd>
                 </div>
               </dl>
               <p class="example__сosts">
-                Затраты на питание: 15 000 руб.
+                Затраты на питание:<br><span class="example__сosts--special">15 000 руб.</span>
               </p>
             </div>
           </div>
           <div class="example__slider slider">
             <ul class="slider__list list">
               <li class="slider__item slider__item--current">
-                <img src="https://via.placeholder.com/251x240" width="251" height="240"
+                <img class="slider__img" src="https://via.placeholder.com/251x240" width="251" height="240"
                   alt="Крупный кот Борис до использования питания Cat Energy Slim">
               </li>
               <li class="slider__item">
-                <img src="https://via.placeholder.com/251x240" width="251" height="240"
+                <img class="slider__img" src="https://via.placeholder.com/251x240" width="251" height="240"
                   alt="Похудевший кот Борис после использования питания Cat Energy Slim">
               </li>
             </ul>
@@ -185,21 +183,21 @@
   </main>
   <footer class="footer">
     <div class="container">
-      <div class="footer__contacts contacts">
+      <div class="footer__contacts contacts contacts--theme-white">
         <p class="contacts__title">
-          Приглашаем к сотрудничеству дилеров!
+          Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <p class="contacts__text">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text--special">Санкт-Петербург</span>
         </p>
       </div>
-      <img class="footer__map" src="img/location@1x.png" width="320" height="362"
-        alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     </div>
+    <img class="footer__map" src="img/location@1x.png" width="320" height="362"
+      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     <div class="container">
       <div class="footer__bottom">
         <div class="footer__logo">
-          <a class="footer__logo-content">
+          <a class="footer__logo-content" class="footer__logo">
             <img class="footer__logo-img" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип Cat Energy">
           </a>
         </div>
@@ -209,7 +207,7 @@
               <span class="visually-hidden">
                 Мы в Вконтакте
               </span>
-              <svg width="23" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="social__icon" width="23" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M.07 3.993c0-.622.423-.957 1.27-1.006l3.26.018c.22 0 .365.091.438.274.336.915.711 1.704 1.127 2.369.416.664.96 1.43 1.63 2.295.059.11.154.165.285.165a.276.276 0 00.24-.128l.067-.201.021-3.165c0-.219-.062-.365-.186-.438-.124-.074-.353-.128-.689-.165-.263-.037-.394-.17-.394-.402 0-.05.007-.086.022-.11.306-.793 1.182-1.189 2.626-1.189l1.226-.018c.554 0 1.014.116 1.379.347.364.232.547.598.547 1.098v4.151a.562.562 0 00.284.092c.22 0 .409-.11.57-.33 1.604-1.877 2.472-3.133 2.604-3.767a.29.29 0 01.044-.092c.102-.182.27-.34.503-.475.233-.134.438-.226.613-.274a.507.507 0 01.197-.037h3.392l.219.018c.292 0 .518.116.678.348a.63.63 0 01.12.238c.022.085.037.17.044.256.008.085.011.134.011.146v.128c-.102.5-.36 1.033-.777 1.6-.415.567-.944 1.18-1.586 1.838-.642.659-1.044 1.092-1.204 1.299-.131.146-.197.28-.197.402 0 .098.058.208.175.33l3.195 3.365a.939.939 0 01.263.64c0 .28-.131.512-.394.695a1.826 1.826 0 01-.941.31l-.372.02h-3.327a.794.794 0 00-.087.008.802.802 0 01-.088.01c-.32 0-.62-.116-.897-.348-.102-.098-.788-.817-2.057-2.158a1.106 1.106 0 00-.307-.238c-.058.195-.135.475-.23.841-.094.366-.164.628-.207.787l-.066.31c-.146.427-.452.684-.92.769l-.306.018H9.743c-1.21 0-2.418-.463-3.622-1.39-1.203-.927-2.287-2.124-3.25-3.594-.963-1.469-1.86-3.18-2.691-5.13a1.254 1.254 0 01-.11-.53zM13.223 8.73a1.66 1.66 0 01-.831-.21c-.248-.14-.372-.333-.372-.577V3.737c0-.244-.073-.418-.22-.522-.145-.103-.4-.155-.765-.155l-1.248.036c-.627 0-1.101.092-1.422.275.642.256.963.67.963 1.243v3.22c-.03.304-.175.557-.438.758a1.405 1.405 0 01-.875.302c-.438 0-.774-.177-1.007-.53C5.87 6.925 5.024 5.559 4.469 4.267l-.197-.476-2.91-.018c-.19 0-.296.01-.318.028-.022.018-.033.07-.033.155 0 .11.015.226.044.348l.46 1.024c1.225 2.646 2.556 4.73 3.994 6.255 1.437 1.524 2.848 2.286 4.234 2.286h2.189c.088 0 .153-.021.197-.064.044-.043.08-.125.11-.247l.043-.183.416-1.61c.117-.219.219-.365.306-.438a.86.86 0 01.57-.201c.35 0 .707.176 1.072.53l1.86 1.975c.117.159.24.238.372.238h3.611c.438 0 .657-.091.657-.274a.312.312 0 00-.066-.183l-3.173-3.31c-.248-.257-.372-.531-.372-.824 0-.292.116-.573.35-.841.19-.244.558-.65 1.105-1.216a28.203 28.203 0 001.434-1.591c.408-.494.678-.942.81-1.345l.065-.237a.243.243 0 01-.022-.12c0-.054-.007-.1-.022-.137H17.82a1.199 1.199 0 00-.525.33l-.131.347c-.365.841-1.32 2.14-2.867 3.896a1.672 1.672 0 01-1.073.366z"
                   fill="#666" />
@@ -243,9 +241,9 @@
         </ul>
         <div class="footer__copyright">
           <a class="footer__copyright-text" href="https://htmlacademy.ru/intensive/adaptive">
-            Html Academy
+            HTML Academy
           </a>
-          <svg class="footer__copyright-img" width="27" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="footer__copyright-icon" width="27" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M13.643.016L13.5 0 0 1.407v24.606L13.5 34 27 26.013V1.407L13.643.016zm11.591 25L13.5 31.956 1.766 25.015V14.93l11.685 6.916.02 1.253-8.017-4.743-.011 1.225 8.046 4.809.02 1.286-8.045-4.758-.01 1.226L13.5 26.95l8.124-4.833V16.91l3.62-2.15-.01 10.256zm0-11.564l-3.22 1.88-1.482.875-7.065-4.187-.011 1.225 6.04 3.573-.053.031-.13.076-.86.492-4.986-2.948-.011 1.225 3.936 2.328-.933.61-.021.012-2.971-1.742-.011 1.225 1.947 1.135-1.988 1.186-11.618-6.872 11.638-6.958 11.8 6.834zm0-1.225L13.44 5.31 1.766 12.22V2.99L13.5 1.764 25.234 2.99v9.237z"
               fill="#666" />
