--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,10 @@
     <div class="header__container container">
       <div class="header__top">
         <a class="header__logo" class="header__logo">
-          <img class="header__logo-img" src="https://via.placeholder.com/190x38" width="190" height="38" alt="Логотип Cat Energy">
+          <picture>
+            <source media="(min-width: 768px)" srcset="img/logo_tablet.svg">
+            <img class="header__logo-img" src="img/logo_mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
+          </picture>
         </a>
         <button class="header__toggle button" type="button">
           <span class="visually-hidden">
@@ -21,18 +24,18 @@
       </div>
       <nav class="header__main-nav main-nav">
         <ul class="main-nav__list list">
-          <li class="main-nav__item main-nav__item--current">
-            <a class="main-nav__link">
+          <li class="main-nav__item main-nav__item--current main-nav__item--theme-white">
+            <a class="main-nav__link main-nav__link--theme-white">
               Главная
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">
+            <a class="main-nav__link main-nav__link--theme-white" href="catalog.html">
               Каталог продукции
             </a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">
+            <a class="main-nav__link main-nav__link--theme-white" href="form.html">
               Подбор программы
             </a>
           </li>
@@ -53,8 +56,12 @@
           <p class="promo__slogan">
             Занялся собой? Займись котом!
           </p>
-          <img class="promo__image" src="../img/index-can-mobile@1x.png" width="280" height="270"
-            alt="Бумажный стакан Cat Energy Pro массой 500 грамм со вкусом курицы">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/promo-product_desktop.png 1x, img/promo-product_desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/promo-product_tablet.png 1x, img/promo-product_tablet@2x.png 2x">
+            <img class="promo__image" src="img/promo-product_mobile.png" srcset="img/promo-product_mobile@2x.png 2x" width="280"
+              height="270" alt="Бумажный стакан Cat Energy Pro массой 500 грамм со вкусом курицы">
+          </picture>
           <a class="promo__button button button--primary" href="form.html">
             Подобрать программу
           </a>
@@ -148,19 +155,25 @@
                 </div>
               </dl>
               <p class="example__сosts">
-                Затраты на питание:<br><span class="example__сosts--special">15 000 руб.</span>
+                Затраты на питание:<br> <span class="example__сosts--special">15 000 руб.</span>
               </p>
             </div>
           </div>
           <div class="example__slider slider">
             <ul class="slider__list list">
-              <li class="slider__item slider__item--current">
-                <img class="slider__img" src="https://via.placeholder.com/251x240" width="251" height="240"
-                  alt="Крупный кот Борис до использования питания Cat Energy Slim">
+              <li class="slider__item slider__item--before slider__item--current">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/slide-before_tablet.png 1x, img/slide-before_tablet@2x.png 2x">
+                  <img class="slider__img slider__img--before" src="img/slide-before_mobile.png" srcset="img/slide-before_mobile@2x.png 2x"
+                    width="311" height="232" alt="Крупный кот Борис до использования питания Cat Energy Slim">
+                </picture>
               </li>
-              <li class="slider__item">
-                <img class="slider__img" src="https://via.placeholder.com/251x240" width="251" height="240"
-                  alt="Похудевший кот Борис после использования питания Cat Energy Slim">
+              <li class="slider__item slider__item--after">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/slide-after_tablet.png 1x, img/slide-after_tablet@2x.png 2x">
+                  <img class="slider__img slider__img--after" src="img/slide-after_mobile.png" srcset="img/slide-after_mobile@2x.png 2x"
+                    width="251" height="240" alt="Похудевший кот Борис после использования питания Cat Energy Slim">
+                </picture>
               </li>
             </ul>
             <div class="slider__control">
@@ -192,13 +205,17 @@
         </p>
       </div>
     </div>
-    <img class="footer__map" src="img/location@1x.png" width="320" height="362"
-      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+    <picture>
+      <source media="(min-width: 1440px)" srcset="img/map_desktop.png 1x, img/map_desktop@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/map_tablet.png 1x, img/map_tablet@2x.png 2x">
+      <img class="footer__map" src="img/map_mobile.png" srcset="img/map_mobile@2x.png 2x" width="320" height="362"
+        alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+    </picture>
     <div class="container">
       <div class="footer__bottom">
         <div class="footer__logo">
           <a class="footer__logo-content" class="footer__logo">
-            <img class="footer__logo-img" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип Cat Energy">
+            <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
           </a>
         </div>
         <ul class="footer__social social list">
