Адаптивная графика формы

--- a/source/index.html
+++ b/source/index.html
@@ -6,11 +6,11 @@
   <title>Функциональное питание для котов "Cat Energy"</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="page__body">
-  <header class="header header--opened">
+<body class="page__body body">
+  <header class="body__header header header--opened">
     <div class="header__container container">
       <div class="header__top">
-        <a class="header__logo" class="header__logo">
+        <a class="header__logo">
           <picture>
             <source media="(min-width: 768px)" srcset="img/logo_tablet.svg">
             <img class="header__logo-img" src="img/logo_mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
@@ -214,7 +214,7 @@
     <div class="container">
       <div class="footer__bottom">
         <div class="footer__logo">
-          <a class="footer__logo-content" class="footer__logo">
+          <a class="footer__logo-link">
             <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
           </a>
         </div>
