--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,11 +7,15 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-  <header class="body__header header header--opened">
+  <header class="body__header body__header--special-margin header header--opened">
     <div class="header__container container">
       <div class="header__top">
-        <a class="header__logo" href="index.html" class="header__logo">
-          <img class="header__logo-img" src="https://via.placeholder.com/190x38" width="190" height="38" alt="Логотип Cat Energy">
+        <a class="header__logo header__logo--not-main" href="index.html">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo_desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo_tablet.svg">
+            <img class="header__logo-img" src="img/logo_mobile.svg" width="190" height="38" alt="Логотип Cat Energy">
+          </picture>
         </a>
         <button class="header__toggle button" type="button">
           <span class="visually-hidden">
@@ -42,7 +46,7 @@
   </header>
   <main class="main">
     <div class="container">
-      <h1 class="main__title title title--large title--decor">
+      <h1 class="main__title main__title--margin title title--large title--decor">
         Каталог продукции
       </h1>
       <section class="main__main-products main-products">
@@ -85,8 +89,11 @@
               </table>
             </div>
             <a class="main-product__link-img" href="blank.html">
-              <img class="main-product__img" src="../img/product-1@1x.png" width="68" height="86"
-                alt="Бумажный оранжевый стакан Cat Energy Pro массой 500 грамм со вкусом курицы">
+              <picture>
+                <source media="(min-width: 450px)" srcset="img/product-1_tablet.png 1x, img/product-1_tablet@2x.png 2x">
+                <img class="main-product__img" src="img/product-1_mobile.png" srcset="img/product-1_mobile@2x.png 2x"
+                  alt="Бумажный оранжевый стакан Cat Energy Pro массой 500 грамм со вкусом курицы">
+              </picture>
             </a>
             <a class="main-product__button button button--primary" href="blank.html">
               Заказать
@@ -127,8 +134,12 @@
               </table>
             </div>
             <a class="main-product__link-img" href="blank.html">
-              <img class="main-product__img" src="../img/product-2@1x.png" width="84" height="101"
-                alt="Бумажный оранжевый стакан Cat Energy Pro массой 1000 грамм со вкусом курицы">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/product-2_desktop.png 1x, img/product-2_desktop@2x.png 2x">
+                <source media="(min-width: 450px)" srcset="img/product-2_tablet.png 1x, img/product-2_tablet@2x.png 2x">
+                <img class="main-product__img" src="img/product-2_mobile.png" srcset="img/product-2_mobile@2x.png 2x"
+                  alt="Бумажный оранжевый стакан Cat Energy Pro массой 1000 грамм со вкусом курицы">
+              </picture>
             </a>
             <a class="main-product__button button button--primary" href="blank.html">
               Заказать
@@ -169,8 +180,11 @@
               </table>
             </div>
             <a class="main-product__link-img" href="blank.html">
-              <img class="main-product__img" src="../img/product-3@1x.png" width="68" height="78"
-                alt="Бумажный салатовый стакан Cat Energy Pro массой 500 грамм со вкусом рыбы">
+              <picture>
+                <source media="(min-width: 450px)" srcset="img/product-3_tablet.png 1x, img/product-3_tablet@2x.png 2x">
+                <img class="main-product__img main-product__img--special-margin" src="img/product-3_mobile.png"
+                  srcset="img/product-3_mobile@2x.png 2x" alt="Бумажный салатовый стакан Cat Energy Pro массой 500 грамм со вкусом рыбы">
+              </picture>
             </a>
             <a class="main-product__button button button--primary" href="blank.html">
               Заказать
@@ -211,8 +225,12 @@
               </table>
             </div>
             <a class="main-product__link-img" href="blank.html">
-              <img class="main-product__img" src="../img/product-4@1x.png" width="68" height="78"
-                alt="Бумажный салатовый стакан Cat Energy Pro массой 1000 грамм со вкусом рыбы">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/product-4_desktop.png 1x, img/product-4_desktop@2x.png 2x">
+                <source media="(min-width: 450px)" srcset="img/product-4_tablet.png 1x, img/product-4_tablet@2x.png 2x">
+                <img class="main-product__img" src="img/product-4_mobile.png" srcset="img/product-4_mobile@2x.png 2x"
+                  alt="Бумажный салатовый стакан Cat Energy Pro массой 1000 грамм со вкусом рыбы">
+              </picture>
             </a>
             <a class="main-product__button button button--primary" href="blank.html">
               Заказать
@@ -253,8 +271,12 @@
               </table>
             </div>
             <a class="main-product__link-img" href="blank.html">
-              <img class="main-product__img" src="../img/product-5@1x.png" width="68" height="78"
-                alt="Бумажный светло-синий стакан Cat Energy Slim массой 500 грамм со вкусом гречки">
+              <picture>
+                <source media="(min-width: 450px)" srcset="img/product-5_tablet.png 1x, img/product-5_tablet@2x.png 2x">
+                <img class="main-product__img main-product__img--special-margin" src="img/product-5_mobile.png"
+                  srcset="img/product-5_mobile@2x.png 2x"
+                  alt="Бумажный светло-синий стакан Cat Energy Slim массой 500 грамм со вкусом гречки">
+              </picture>
             </a>
             <a class="main-product__button button button--primary" href="blank.html">
               Заказать
@@ -295,8 +317,12 @@
               </table>
             </div>
             <a class="main-product__link-img" href="blank.html">
-              <img class="main-product__img" src="../img/product-6@1x.png" width="84" height="100"
-                alt="Бумажный светло-синий стакан Cat Energy Slim массой 1000 грамм со вкусом гречки">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/product-6_desktop.png 1x, img/product-6_desktop@2x.png 2x">
+                <source media="(min-width: 450px)" srcset="img/product-6_tablet.png 1x, img/product-6_tablet@2x.png 2x">
+                <img class="main-product__img" src="img/product-6_mobile.png" srcset="img/product-6_mobile@2x.png 2x"
+                  alt="Бумажный светло-синий стакан Cat Energy Slim массой 1000 грамм со вкусом гречки">
+              </picture>
             </a>
             <a class="main-product__button button button--primary" href="blank.html">
               Заказать
@@ -337,8 +363,11 @@
               </table>
             </div>
             <a class="main-product__link-img" href="blank.html">
-              <img class="main-product__img" src="../img/product-7@1x.png" width="72" height="84"
-                alt="Бумажный фиолетовый стакан Cat Energy Slim массой 500 грамм со вкусом риса">
+              <picture>
+                <source media="(min-width: 450px)" srcset="img/product-7_tablet.png 1x, img/product-7_tablet@2x.png 2x">
+                <img class="main-product__img main-product__img--special-margin" src=" img/product-7_mobile.png"
+                  srcset="img/product-7_mobile@2x.png 2x" alt="Бумажный фиолетовый стакан Cat Energy Slim массой 500 грамм со вкусом риса">
+              </picture>
             </a>
             <a class="main-product__button button button--primary" href="blank.html">
               Заказать
@@ -346,10 +375,10 @@
           </li>
           <li class="main-products__item main-products__item--all all-product">
             <p class="all-product__title title title--small title--theme-dark">
-              Показать еще 100500 товаров
+              Показать еще 100500&nbsp;товаров
             </p>
             <p class="all-product__text">
-              На самом деле вкусов гораздо больше!
+              На самом деле вкусов гораздо&nbsp;больше!
             </p>
             <a class="all-product__button button button--secondary" href="blank.html">
               Показать все
@@ -390,7 +419,7 @@
                   <dt class="additional-product__term">
                     5 литров
                   </dt>
-                  <dd class="additional-product__definition">
+                  <dd class="additional-product__definition additional-product__definition--special-margin">
                     50 Р.
                   </dd>
                 </dl>
@@ -436,9 +465,9 @@
               </a>
             </li>
           </ul>
-          <div class="additional-products__gift gift">
+          <div class="gift">
             <p class="gift__text">
-              Закажите все и получите чехол для кота в подарок!
+              Закажите все<br> и&nbsp;получите чехол для<br> кота в подарок!
             </p>
           </div>
         </div>
@@ -447,71 +476,78 @@
   </main>
   <footer class="footer">
     <div class="container">
-      <div class="footer__contacts contacts">
+      <div class="footer__contacts contacts contacts--theme-white contacts--no-theme-white contacts--padding">
         <p class="contacts__title">
-          Приглашаем к сотрудничеству дилеров!
+          Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <p class="contacts__text">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text--special">Санкт-Петербург</span>
         </p>
       </div>
     </div>
-    <img class="footer__map" src="img/location@1x.png" width="320" height="362"
-      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+    <picture>
+      <source media="(min-width: 1440px)" srcset="img/map_desktop.png 1x, img/map_desktop@2x.png 2x">
+      <source media="(min-width: 768px)" srcset="img/map_tablet.png 1x, img/map_tablet@2x.png 2x">
+      <img class="footer__map" src="img/map_mobile.png" srcset="img/map_mobile@2x.png 2x" width="320" height="362"
+        alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+    </picture>
     <div class="container">
       <div class="footer__bottom">
         <div class="footer__logo">
-          <a class="footer__logo-content" href="index.html" class="footer__logo">
-            <img class="footer__logo-img" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип Cat Energy">
+          <a class="footer__logo-link" href="index.html">
+            <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
           </a>
         </div>
         <ul class="footer__social social list">
           <li class="social__item">
-            <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
+            <a class="social__link" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">
                 Мы в Вконтакте
               </span>
-              <svg width="23" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="social__icon social__icon--vk" width="23" height="16" viewBox="0 0 23 16" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M.07 3.993c0-.622.423-.957 1.27-1.006l3.26.018c.22 0 .365.091.438.274.336.915.711 1.704 1.127 2.369.416.664.96 1.43 1.63 2.295.059.11.154.165.285.165a.276.276 0 00.24-.128l.067-.201.021-3.165c0-.219-.062-.365-.186-.438-.124-.074-.353-.128-.689-.165-.263-.037-.394-.17-.394-.402 0-.05.007-.086.022-.11.306-.793 1.182-1.189 2.626-1.189l1.226-.018c.554 0 1.014.116 1.379.347.364.232.547.598.547 1.098v4.151a.562.562 0 00.284.092c.22 0 .409-.11.57-.33 1.604-1.877 2.472-3.133 2.604-3.767a.29.29 0 01.044-.092c.102-.182.27-.34.503-.475.233-.134.438-.226.613-.274a.507.507 0 01.197-.037h3.392l.219.018c.292 0 .518.116.678.348a.63.63 0 01.12.238c.022.085.037.17.044.256.008.085.011.134.011.146v.128c-.102.5-.36 1.033-.777 1.6-.415.567-.944 1.18-1.586 1.838-.642.659-1.044 1.092-1.204 1.299-.131.146-.197.28-.197.402 0 .098.058.208.175.33l3.195 3.365a.939.939 0 01.263.64c0 .28-.131.512-.394.695a1.826 1.826 0 01-.941.31l-.372.02h-3.327a.794.794 0 00-.087.008.802.802 0 01-.088.01c-.32 0-.62-.116-.897-.348-.102-.098-.788-.817-2.057-2.158a1.106 1.106 0 00-.307-.238c-.058.195-.135.475-.23.841-.094.366-.164.628-.207.787l-.066.31c-.146.427-.452.684-.92.769l-.306.018H9.743c-1.21 0-2.418-.463-3.622-1.39-1.203-.927-2.287-2.124-3.25-3.594-.963-1.469-1.86-3.18-2.691-5.13a1.254 1.254 0 01-.11-.53zM13.223 8.73a1.66 1.66 0 01-.831-.21c-.248-.14-.372-.333-.372-.577V3.737c0-.244-.073-.418-.22-.522-.145-.103-.4-.155-.765-.155l-1.248.036c-.627 0-1.101.092-1.422.275.642.256.963.67.963 1.243v3.22c-.03.304-.175.557-.438.758a1.405 1.405 0 01-.875.302c-.438 0-.774-.177-1.007-.53C5.87 6.925 5.024 5.559 4.469 4.267l-.197-.476-2.91-.018c-.19 0-.296.01-.318.028-.022.018-.033.07-.033.155 0 .11.015.226.044.348l.46 1.024c1.225 2.646 2.556 4.73 3.994 6.255 1.437 1.524 2.848 2.286 4.234 2.286h2.189c.088 0 .153-.021.197-.064.044-.043.08-.125.11-.247l.043-.183.416-1.61c.117-.219.219-.365.306-.438a.86.86 0 01.57-.201c.35 0 .707.176 1.072.53l1.86 1.975c.117.159.24.238.372.238h3.611c.438 0 .657-.091.657-.274a.312.312 0 00-.066-.183l-3.173-3.31c-.248-.257-.372-.531-.372-.824 0-.292.116-.573.35-.841.19-.244.558-.65 1.105-1.216a28.203 28.203 0 001.434-1.591c.408-.494.678-.942.81-1.345l.065-.237a.243.243 0 01-.022-.12c0-.054-.007-.1-.022-.137H17.82a1.199 1.199 0 00-.525.33l-.131.347c-.365.841-1.32 2.14-2.867 3.896a1.672 1.672 0 01-1.073.366z"
-                  fill="#666" />
+                  fill="currentColor" />
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--inst" href="https://www.instagram.com/htmlacademy">
+            <a class="social__link" href="https://www.instagram.com/htmlacademy">
               <span class="visually-hidden">
                 Мы в Инстаграме
               </span>
-              <svg width="16" height="16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="social__icon social__icon--inst" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M7.984.063c1.334 0 2.422.015 3.266.046.719.032 1.36.157 1.922.375.541.209 1.01.51 1.406.907.396.395.698.864.906 1.406.22.562.344 1.203.375 1.922.032.843.047 1.932.047 3.265 0 1.334-.015 2.422-.047 3.266-.03.719-.156 1.36-.375 1.922a3.987 3.987 0 01-.906 1.406 3.987 3.987 0 01-1.406.906c-.563.22-1.203.344-1.922.375-.844.032-1.932.047-3.266.047a91.88 91.88 0 01-3.265-.047c-.719-.03-1.36-.156-1.922-.375a3.987 3.987 0 01-1.406-.906 3.987 3.987 0 01-.907-1.406C.266 12.609.141 11.969.11 11.25a91.735 91.735 0 01-.046-3.266c0-1.333.015-2.421.046-3.265.032-.719.157-1.36.375-1.922.209-.542.51-1.01.907-1.406A3.987 3.987 0 012.797.484C3.359.266 4 .141 4.719.11A91.733 91.733 0 017.984.063zm0 1.03c-1.385 0-2.515.016-3.39.048-.563.02-1.084.12-1.563.296a2.853 2.853 0 00-1.594 1.594c-.177.48-.276 1-.296 1.563a98.83 98.83 0 00-.047 3.39c0 1.386.015 2.516.047 3.391.02.563.12 1.083.296 1.563.313.75.844 1.28 1.594 1.593.48.177 1 .276 1.563.297.875.031 2.005.047 3.39.047 1.386 0 2.516-.016 3.391-.047a5.015 5.015 0 001.563-.297 2.852 2.852 0 001.593-1.594c.177-.479.276-1 .297-1.562.031-.875.047-2.005.047-3.39 0-1.386-.016-2.516-.047-3.391a5.015 5.015 0 00-.297-1.563 2.853 2.853 0 00-1.594-1.594c-.479-.177-1-.276-1.562-.296a98.803 98.803 0 00-3.39-.047zm0 10.063c.875 0 1.623-.31 2.243-.93.62-.62.93-1.367.93-2.242s-.31-1.622-.93-2.242a3.056 3.056 0 00-2.243-.93c-.875 0-1.622.31-2.242.93-.62.62-.93 1.367-.93 2.242s.31 1.623.93 2.243c.62.62 1.367.93 2.242.93zm0-7.234c1.125 0 2.084.396 2.875 1.187.792.792 1.188 1.75 1.188 2.875s-.396 2.084-1.188 2.875c-.791.792-1.75 1.188-2.875 1.188s-2.083-.396-2.875-1.188c-.791-.791-1.187-1.75-1.187-2.875s.396-2.083 1.187-2.875c.792-.791 1.75-1.187 2.875-1.187zm5.188-.156c0 .26-.094.481-.281.664a.949.949 0 01-.688.273.904.904 0 01-.664-.273.904.904 0 01-.273-.664c0-.271.09-.5.273-.688a.891.891 0 01.664-.281.93.93 0 01.68.289.93.93 0 01.289.68z"
-                  fill="#666" />
+                  fill="currentColor" />
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--fb" href="https://www.facebook.com/htmlacademy">
+            <a class="social__link" href="https://www.facebook.com/htmlacademy">
               <span class="visually-hidden">
                 Мы в Фейсбуке
               </span>
-              <svg width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="social__icon social__icon--fb" width="22" height="22" viewBox="0 0 22 22" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M16.5 1.833h-2.75a4.63 4.63 0 00-3.24 1.317 4.45 4.45 0 00-1.343 3.177v2.697h-2.75v3.595h2.75v7.191h3.666v-7.19h2.75l.917-3.596h-3.667V6.327a.89.89 0 01.269-.635.926.926 0 01.648-.263h2.75V1.833z"
-                  stroke="#666" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round" />
+                  stroke="currentColor" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round" />
               </svg>
             </a>
           </li>
         </ul>
         <div class="footer__copyright">
-          <a class="footer__copyright-text" href="https://htmlacademy.ru/intensive/adaptive">
-            Html Academy
+          <a class="footer__copyright-text footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+            HTML Academy
           </a>
-          <svg class="footer__copyright-icon" width="27" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M13.643.016L13.5 0 0 1.407v24.606L13.5 34 27 26.013V1.407L13.643.016zm11.591 25L13.5 31.956 1.766 25.015V14.93l11.685 6.916.02 1.253-8.017-4.743-.011 1.225 8.046 4.809.02 1.286-8.045-4.758-.01 1.226L13.5 26.95l8.124-4.833V16.91l3.62-2.15-.01 10.256zm0-11.564l-3.22 1.88-1.482.875-7.065-4.187-.011 1.225 6.04 3.573-.053.031-.13.076-.86.492-4.986-2.948-.011 1.225 3.936 2.328-.933.61-.021.012-2.971-1.742-.011 1.225 1.947 1.135-1.988 1.186-11.618-6.872 11.638-6.958 11.8 6.834zm0-1.225L13.44 5.31 1.766 12.22V2.99L13.5 1.764 25.234 2.99v9.237z"
-              fill="#666" />
-          </svg>
+          <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg class="footer__copyright-icon" width="27" height="34" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M13.643.016L13.5 0 0 1.407v24.606L13.5 34 27 26.013V1.407L13.643.016zm11.591 25L13.5 31.956 1.766 25.015V14.93l11.685 6.916.02 1.253-8.017-4.743-.011 1.225 8.046 4.809.02 1.286-8.045-4.758-.01 1.226L13.5 26.95l8.124-4.833V16.91l3.62-2.15-.01 10.256zm0-11.564l-3.22 1.88-1.482.875-7.065-4.187-.011 1.225 6.04 3.573-.053.031-.13.076-.86.492-4.986-2.948-.011 1.225 3.936 2.328-.933.61-.021.012-2.971-1.742-.011 1.225 1.947 1.135-1.988 1.186-11.618-6.872 11.638-6.958 11.8 6.834zm0-1.225L13.44 5.31 1.766 12.22V2.99L13.5 1.764 25.234 2.99v9.237z"
+                fill="currentColor" />
+            </svg>
+          </a>
         </div>
       </div>
     </div>
