--- a/source/blank.html
+++ b/source/blank.html
@@ -64,7 +64,8 @@
         </p>
       </div>
     </div>
-    <div class="footer__map" id="map">
+    <div class="footer__map">
+      <div class="footer__map-content" id="map"></div>
     </div>
     <div class="container">
       <div class="footer__bottom">
@@ -118,8 +119,7 @@
       </div>
     </div>
   </footer>
-  <script src="js/header.min.js"></script>
-  <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="js/map-api.min.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=fc4e44cb-c351-4462-93d4-686a12532872&lang=ru_RU"></script>
+  <script src="js/script.min.js"></script>
 </body>
 </html>
