--- a/source/index.html
+++ b/source/index.html
@@ -141,7 +141,7 @@
             </h2>
             <p class="example__desc">
               Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-              изнуряющих тренировок! При этом он не менял своих привычек и <nobr>по-прежнему</nobr> спит по 16 часов в день.
+              изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
             </p>
             <div class="example__content-result">
               <dl class="example__list list">
