--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
   <header class="body__header body__header--special-margin header header--opened">
     <div class="header__container container">
       <div class="header__top">
-        <a class="header__logo header__logo--not-main" href="index.html">
+        <a class="header__logo header__logo--not-main" href="index.html" aria-label="Перейти на главную страницу">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo_desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo_tablet.svg">
@@ -225,7 +225,7 @@
     <div class="container">
       <div class="footer__bottom">
         <div class="footer__logo">
-          <a class="footer__logo-link footer__logo-link--not-main" href="index.html">
+          <a class="footer__logo-link footer__logo-link--not-main" href="index.html" aria-label="Перейти на главную страницу">
             <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="Логотип Cat Energy">
           </a>
         </div>
