Правки на защите

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Функциональное питание для котов "Cat Energy"</title>
-  <link rel="preload" href="fonts/oswaldregular.woff" as="font" type="font/woff">
-  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/oswaldregular.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body class="page__body">
+<body class="page__body body">
   <header class="body__header body__header--special-margin header header--opened">
     <div class="header__container container">
       <div class="header__top">
@@ -503,7 +503,7 @@
           Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <p class="contacts__text">
-          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text--special">Санкт-Петербург</span>
+          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text-special">Санкт-Петербург</span>
         </p>
       </div>
     </div>
