--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Функциональное питание для котов "Cat Energy"</title>
-  <link rel="preload" href="fonts/oswaldregular.woff" as="font" type="font/woff">
-  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/oswaldregular.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page__body body">
@@ -163,7 +163,7 @@
                 </div>
               </dl>
               <p class="example__сosts">
-                Затраты на питание:<span class="break"></span> <span class="example__сosts--special">15 000 руб.</span>
+                Затраты на питание:<span class="break"></span> <span class="example__сosts-special">15 000 руб.</span>
               </p>
             </div>
           </div>
@@ -215,7 +215,7 @@
           Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <p class="contacts__text">
-          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text--special">Санкт-Петербург</span>
+          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text-special">Санкт-Петербург</span>
         </p>
       </div>
     </div>
