--- a/source/form.html
+++ b/source/form.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Функциональное питание для котов "Cat Energy"</title>
-  <link rel="preload" href="fonts/oswaldregular.woff" as="font" type="font/woff">
-  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="fonts/oswaldregular.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page__body body">
@@ -215,7 +215,7 @@
           Приглашаем к&nbsp;сотрудничеству дилеров!
         </p>
         <p class="contacts__text">
-          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text--special">Санкт-Петербург</span>
+          ул. Большая Конюшенная, д. 19/8 <span class="contacts__text-special">Санкт-Петербург</span>
         </p>
       </div>
     </div>
